# internal/handlers/ad.go
@@ -12,8 +12,9 @@ import (
 // GetAds godoc
 //
 //	@Summary		Get ads
-//	@Description	Get all ads or filter them using one or more `filter` query parameters.
-//	@Description	Supported operators:
+//	@Description	Get all ads or filter and order them using query parameters.
+//	@Description
+//	@Description	Filtering operators:
 //	@Description	:   (equals)
 //	@Description	!:  (not equals)
 //	@Description	>   (greater than)
@@ -22,10 +23,20 @@ import (
 //	@Description	<=  (less than or equal)
 //	@Description	~   (contains, case-insensitive)
 //	@Description
-//	@Description	example: /ads?filter=is_active:true&filter=budget>=100000
+//	@Description	Examples:
+//	@Description	/ads?filter=is_active:true
+//	@Description	/ads?filter=program_id:1
+//	@Description	/ads?filter=bid_price>=1000
+//	@Description	/ads?order_by=bid_price&sort=desc
+//	@Description	/ads?order_by=created_at&order_by=bid_price&sort=desc&sort=asc
+//
 //	@Tags			Ad
 //	@Produce		json
-//	@Param			filter	query	[]string	false	"Filter expression. Can be repeated."
+//
+//	@Param			filter		query	[]string	false	"Filter expression. Can be repeated."
+//	@Param			order_by	query	[]string	false	"Fields to order by. Can be repeated."
+//	@Param			sort		query	[]string	false	"Sort direction for each order_by field (asc or desc). Can be repeated."
+//
 //	@Success		200		{array}		models.Ad
 //	@Failure		400		{object}	map[string]string
 //	@Failure		500		{object}	map[string]string
